2001-11-02  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-private.h: Rename killme to cached in _SoupAddress.

	* src/libsoup/soup-socket-unix.c (soup_address_get_name_cb): Use
	g_strndup instead of g_new/strncpy.
	(soup_address_new_cb): Set cache status to CACHE_OK on success.
	(prune_zeroref_addresses_foreach): Use ia->cached.
	(soup_address_unref): Free addresses which are NOT_CACHED.

2001-11-02  Alex Graveley  <alex@ximian.com>
	
	* src/libsoup/soup-context.c (soup_try_existing_connections):
	Remove old fixed FIXME.

	* src/libsoup/soup-socket-unix.c
	(prune_zeroref_addresses_timeout): Remove timeout if
	active_address_hash is null.
	(soup_address_unref): Only install timeout handler if the address
	has a name, otherwise just free.

2001-11-01  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-transfer.c (issue_final_callback): Null
	terminate recv_buf before copying the data pointer.

2001-10-31  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-context.c (soup_context_connect_cb): Drop
	connection count of connect failed.
	(soup_context_get_connection): Increment connection count before
	calling soup_socket_connect() to avoid connection limit being
	passed by many messages queued at the same time.

	* src/libsoup/soup-server.c (read_done_cb): Assign request's data
	buffer to message request buffer, not response.  Caught by Tim
	Moloney.

	* src/libsoup/soup-transfer.c (soup_transfer_read_cb): Zero
	terminate alloca'd header string passed to headers_done_cb.

2001-10-31  Dan Winship  <danw@ximian.com>

	* configure.in: Fix the popt check so you can pass CPPFLAGS and
	LDFLAGS in in the environment.

2001-10-30  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-auth.c (soup_auth_set_context): Remove the
	existing SoupAuth from the from the server's valid_auths hash.
	(soup_auth_new_from_header_list): Fix bug where auth header
	evaluation stopped after finding the first matching scheme.

2001-10-30  Alex Graveley  <alex@ximian.com>
